--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/react-fontawesome": "^0.1.18",
 		"font-awesome": "^4.7.0",
+		"jquery": "^3.6.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
