--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
 		"react-dom": "^16.8.4",
 		"react-icons": "^4.3.1",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"styled-components": "^5.3.5",
+		"sweetalert2": "^11.4.16"
 	}
 }
