pag product mapeado condicional

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
   },
   "[sql]": {
     "editor.defaultFormatter": "cweijan.vscode-mysql-client2"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   }
 }
