--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"react-dom": "^16.8.4",
 		"react-hook-form": "^7.31.3",
 		"react-icons": "^4.3.1",
+		"react-intersection-observer": "^9.2.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.3.5",
