--- a/package.json
+++ b/package.json
@@ -77,11 +77,12 @@
 		"@fortawesome/free-regular-svg-icons": "^6.1.1",
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/react-fontawesome": "^0.1.18",
+		"axios": "^0.27.2",
+		"cloudinary-react": "^1.7.2",
 		"font-awesome": "^4.7.0",
 		"jquery": "^3.6.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
-		
 		"react-dom": "^16.8.4",
 		"react-hook-form": "^7.31.3",
 		"react-icons": "^4.3.1",
