--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "cloudinary-react": "^1.7.2",
     "font-awesome": "^4.7.0",
